# brick

./: .hgignore  .hgtags  CMakeLists.txt  Doxyfile.cmakein  LICENSE.TXT  README.TXT  README.md  RELEASE_NOTES.TXT  VERSION.TXT
common/brick/common/: CMakeLists.txt  Makefile.am  argumentDescription.hh  byteOrder.hh  compileTimestamp.cc  compileTimestamp.hh  complexNumber.hh  constants.hh  exception.cc  exception.hh  expect.cc  expect.hh  functional.hh  inputStream.cc  inputStream.hh  mathFunctions.hh  referenceCount.hh  stridedPointer.hh  traceable.cc  traceable.hh  triple.hh  types.hh  versionNumber.hh
common/brick/common/test/: CMakeLists.txt  Makefile.am  byteOrderTest.cc  expectTest.cc  referenceCountTest.cc  traceableTest.cc
computerVision/: CMakeLists.txt  LICENSE.TXT  Makefile.am  README.TXT  RELEASE_NOTES.TXT  VERSION.TXT  configDebug.sh  configFast.sh  configure.ac
computerVision/brick/computerVision/: CMakeLists.txt  Makefile.am  calibrationTools.hh  calibrationToolsRobust.hh  calibrationToolsRobust_impl.hh  calibrationTools_impl.hh  cameraIntrinsics.hh  cameraIntrinsicsDistorted.hh  cameraIntrinsicsDistortedPinhole.hh  cameraIntrinsicsDistortedPinhole_impl.hh  cameraIntrinsicsDistorted_impl.hh  cameraIntrinsicsPinhole.cc  cameraIntrinsicsPinhole.hh  cameraIntrinsicsPinhole_impl.hh  cameraIntrinsicsPlumbBob.cc  cameraIntrinsicsPlumbBob.hh  cameraIntrinsicsPlumbBob_impl.hh  cameraIntrinsicsRational.hh  cameraIntrinsicsRational_impl.hh  canny.hh  canny_impl.hh  colorspaceConverter.hh  colorspaceConverter_impl.hh  connectedComponents.cc  connectedComponents.hh  connectedComponents_impl.hh  dilate.hh  dilate_impl.hh  disjointSet.hh  disjointSet_impl.hh  eightPointAlgorithm.hh  eightPointAlgorithm_impl.hh  erode.hh  erode_impl.hh  extendedKalmanFilter.hh  extendedKalmanFilter_impl.hh  featureAssociation.hh  featureAssociation_impl.hh  fitPolynomial.hh  fitPolynomial_impl.hh  (+80 more)
computerVision/brick/computerVision/test/: CMakeLists.txt  Makefile.am  bullseyeTestImage0.pgm  bullseyeTestImage1.pgm  bullseyeTestImage2.pgm  bullseyeTestImage3.pgm  calibrationToolsRobustTest.cc  calibrationToolsTest.cc  cameraIntrinsicsPinholeTest.cc  cameraIntrinsicsPlumbBobTest.cc  cameraIntrinsicsRationalTest.cc  cannyTest.cc  colorspaceConverterTest.cc  connectedComponentsTest.cc  connectedComponentsTestImage0.pgm  connectedComponentsTestImage1.pgm  dilateErodeTestImage0.pgm  dilateTest.cc  dilatedTestImage0.pgm  edgeTestImage0.pgm  eightPointAlgorithmTest.cc  erodeTest.cc  erodedTestImage0.pgm  extendedKalmanFilterTest.cc  featureAssociationTest.cc  (+32 more)
computerVision/config/: brick_have_bricklinearalgebra.m4  brick_have_bricknumeric.m4  brick_have_png.m4
computerVision/doc/: doxygen.config
computerVision/scripts/: brick_have_brickcomputervision.m4
geometry/brick/geometry/: CMakeLists.txt  Makefile.am  bullseye2D.hh  bullseye2D_impl.hh  circle2D.hh  circle2D_impl.hh  circle3D.hh  circle3D_impl.hh  ellipse2D.hh  ellipse2D_impl.hh  lineSegment2D.hh  lineSegment2D_impl.hh  plane3D.hh  plane3D_impl.hh  quorum.cc  ray2D.hh  ray2D_impl.hh  ray3D.hh  ray3D_impl.hh  triangle2D.hh  triangle2D_impl.hh  triangle3D.hh  triangle3D_impl.hh  utilities2D.hh  utilities2D_impl.hh  utilities3D.hh  utilities3D_impl.hh
iso12233/brick/iso12233/: CMakeLists.txt  iso12233.cc  iso12233.hh  iso12233_impl.hh  oecf.hh  oecf_impl.hh  symbolImports.hh
linearAlgebra/brick/linearAlgebra/: CMakeLists.txt  Makefile.am  clapack.h  clapack.hh  linearAlgebra.cc  linearAlgebra.hh  linearAlgebra_impl.hh
numeric/brick/numeric/: CMakeLists.txt  Makefile.am  amanatidesWoo2D.hh  amanatidesWoo2DIterator.hh  amanatidesWoo2DIterator_impl.hh  amanatidesWoo2D_impl.hh  amanatidesWoo3D.hh  amanatidesWoo3DIterator.hh  amanatidesWoo3DIterator_impl.hh  amanatidesWoo3D_impl.hh  array1D.hh  array1D_impl.hh  array2D.hh  array2D_impl.hh  array3D.hh  array3D_impl.hh  arrayND.hh  arrayND_impl.hh  bSpline.hh  bSpline2D.hh  bSpline2D_impl.hh  bSpline_impl.hh  bilinearInterpolator.hh  bilinearInterpolator_impl.hh  boxIntegrator2D.hh  boxIntegrator2D_impl.hh  convolutionStrategy.hh  convolve1D.hh  convolve1D_impl.hh  convolve2D.hh  convolve2D_impl.hh  convolveND.hh  convolveND_impl.hh  derivativeRidders.hh  derivativeRidders_impl.hh  differentiableScalar.hh  differentiableScalar_impl.hh  extremumRecorder.hh  fft.hh  fft_impl.hh  (+62 more)
numeric/doc/: Makefile.am  doxygen.config
optimization/brick/optimization/: CMakeLists.txt  Makefile.am  autoGradientFunctionLM.hh  gradientFunction.h  gradientFunction.hh  gradientFunctionLM.h  gradientFunctionLM.hh  lossFunctions.hh  optimizer.hh  optimizerBFGS.h  optimizerBFGS.hh  optimizerCommon.h  optimizerCommon.hh  optimizerLM.hh  optimizerLineSearch.h  optimizerLineSearch.hh  optimizerNelderMead.h  optimizerNelderMead.hh
pixelGraphics/brick/pixelGraphics/: CMakeLists.txt  Makefile.am  draw2D.hh  draw2D_impl.hh
portability/brick/portability/: CMakeLists.txt  Makefile.am  filesystem.cc  filesystem.hh  standardC.cc  standardC.hh  timeUtilities.cc  timeUtilities.hh
random/: CMakeLists.txt  LICENSE.TXT  Makefile.am  README.TXT  RELEASE_NOTES.TXT  VERSION.TXT  configure.ac
random/brick/random/: CMakeLists.txt  Makefile.am  clapack.hh  pseudoRandom.cc  pseudoRandom.hh
random/config/: brick_have_brickcommon.m4
random/doc/: doxygen.config
random/scripts/: brick_have_brickrandom.m4
test/brick/test/: CMakeLists.txt  Makefile.am  automaticMain.cc  autoregister.cc  autoregister.hh  functors.hh  runnableObject.hh  testException.hh  testFixture.hh  testMacros.hh
utilities/: CMakeLists.txt  LICENSE.TXT  Makefile.am  README.TXT  RELEASE_NOTES.TXT  TODO.TXT  VERSION.TXT  configFast.sh  configure.ac
utilities/brick/utilities/: CMakeLists.txt  Makefile.am  date.cc  date.hh  exception.hh  frequencyGoverner.hh  imageIO.hh  lockFile.cc  lockFile.hh  optionDescription.cc  optionDescription.hh  optionParser.cc  optionParser.hh  path.cc  path.hh  pythonIO.hh  stringManipulation.cc  stringManipulation.hh  tee.hh  timeUtilities.hh
utilities/doc/: doxygen.config
utilities/scripts/: brick_have_brickutilities.m4
(+178 files in other folders)
